# beagley-cluster

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  run_1920x720.sh
src/: main.cpp  qml.qrc  web
src/data/: VehicleStateClient.cpp  VehicleStateClient.h
src/resources/: web.qrc
src/ui/: Main.qml  Main.qml.bak
src/ui/mock/: MockVehicleState.qml  qmldir
src/ui/theme/: PurplePearlTheme.qml
src/ui/web/map/: index.html
src/ui/widgets/: FuelGauge.qml  FuelPumpIcon.qml  HighBeamHalo.qml  MapCenter.qml  MapCenterPlaceholder.qml  MapCenterSnapshot.qml  MapCenterWeb.qml  MatrixRain.qml  SpeedGauge.qml  SpeedoPearl.qml  TachGauge.qml  TurnChevronFlow.qml  VehicleInfoCenter.qml  qmldir
src/ui/widgets/vic/: ATIcon.qml  VicWarningColors.qml  VicWarningHalo.qml  VicWarningIcon.qml
src/ui/widgets/vic/icons/: AtIcon.qml  BrakeIcon.qml  ChargeIcon.qml  CheckIcon.qml  DoorIcon.qml  FuelIcon.qml  HighBeamIcon.qml  OilIcon.qml
src/ui/widgets/vic/warnings/: AtWarning.qml  BrakeWarning.qml  ChargeWarning.qml  CheckWarning.qml  DoorWarning.qml  FuelWarning.qml
